// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot and functional tests for button components All button, default props 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#000000",
      "borderBottomWidth": 1,
      "borderColor": "#1a1a1a",
      "borderLeftWidth": 0,
      "borderRightWidth": 0,
      "borderTopWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "paddingLeft": 16,
      "paddingRight": 25,
      "paddingVertical": 20,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#ffffff",
          "flex": 1,
          "fontFamily": "Graphik-Regular-App",
          "fontSize": 16,
        },
        {},
      ]
    }
  >
    Test
  </Text>
  <Image
    source={1}
    style={
      {
        "height": 24,
        "width": 24,
      }
    }
  />
</View>
`;

exports[`Snapshot and functional tests for button components Async white button, outlined, loading 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "white",
        "borderRadius": 0,
        "borderWidth": 3,
        "height": "100%",
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <ActivityIndicator
      color="black"
    />
  </View>
</View>
`;

exports[`Snapshot and functional tests for button components Async white button, solidBlack, not loading 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderRadius": 0,
        "height": "100%",
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "white",
          "fontFamily": "Graphik-Bold-App",
          "fontSize": 16,
        }
      }
    >
      TMH
    </Text>
  </View>
</View>
`;

exports[`Snapshot and functional tests for button components Icon button, default props 1`] = `
<View
  accessibilityLabel="Testing"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      [
        {
          "borderBottomColor": "#ffffff",
          "borderBottomWidth": 1,
          "color": "#ffffff",
          "marginLeft": 15,
          "marginRight": 15,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        {},
        {},
      ]
    }
  >
    Testing
  </Text>
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`Snapshot and functional tests for button components Icon button, test rightArrow prop 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "flexDirection": "row",
      "opacity": 1,
    }
  }
>
  <Text
    style={
      [
        {
          "borderBottomColor": "#ffffff",
          "borderBottomWidth": 1,
          "color": "#ffffff",
          "marginLeft": 15,
          "marginRight": 15,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        {},
        {},
      ]
    }
  />
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
  <Image
    accessibilityLabel="Right Arrow"
    source={1}
    style={
      {
        "height": 24,
        "marginRight": 15,
        "width": 24,
      }
    }
  />
</View>
`;

exports[`Snapshot and functional tests for button components Teaching button, active 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Image
    accessibilityLabel="icon"
    style={
      {
        "height": 24,
        "marginRight": 18,
        "width": 24,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "white",
          "fontFamily": "Graphik-Bold-App",
          "fontSize": 16,
        },
        {
          "color": "#000000",
          "fontFamily": "Graphik-Bold-App",
          "fontSize": 16,
        },
      ]
    }
  >
    TMH
  </Text>
</View>
`;

exports[`Snapshot and functional tests for button components Teaching button, inactive 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1a1a1a",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
    }
  }
>
  <Image
    accessibilityLabel="icon"
    style={
      {
        "height": 24,
        "marginRight": 18,
        "width": 24,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "white",
          "fontFamily": "Graphik-Bold-App",
          "fontSize": 16,
        },
        {},
      ]
    }
  >
    TMH
  </Text>
</View>
`;

exports[`Snapshot and functional tests for button components White button, outlined 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "white",
        "borderRadius": 0,
        "borderWidth": 3,
        "height": "100%",
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "white",
          "fontFamily": "Graphik-Bold-App",
          "fontSize": 16,
        }
      }
    >
      TMH
    </Text>
  </View>
</View>
`;

exports[`Snapshot and functional tests for button components White button, solidBlack 1`] = `
<View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderRadius": 0,
        "height": "100%",
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "white",
          "fontFamily": "Graphik-Bold-App",
          "fontSize": 16,
        }
      }
    >
      TMH
    </Text>
  </View>
</View>
`;
